--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tb-dev/vue-import-config",
-  "version": "1.1.5",
+  "version": "1.2.0",
   "description": "Config for unplugin-vue-components",
   "license": "MIT",
   "type": "module",
@@ -27,6 +27,7 @@
     "type-check": "tsc --noEmit"
   },
   "devDependencies": {
+    "@tb-dev/eslint-config": "^3.4.2",
     "@types/node": "^20.12.8",
     "eslint": "^8.57.0",
     "husky": "^9.0.11",
