--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -7,6 +7,7 @@
     "github.vscode-pull-request-github",
     "esbenp.prettier-vscode",
     "vscode-icons-team.vscode-icons",
-    "redhat.vscode-yaml"
+    "redhat.vscode-yaml",
+    "ms-vscode.vscode-typescript-next"
   ]
 }
